# kam

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: KamApp.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/services/: camera-selector.ts  settings-page-custom-element.ts  take-photo.ts
