[package]
name = "kam"
version = "0.0.0"
description = "Kam - Windows Camera Preview"
authors = ["David Jiménez"]
license = "MIT"
repository = "https://github.com/kiimesoft/kam"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-set-position", "updater", "window-set-focus", "window-show", "window-hide", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-positioner = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
